--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -4,24 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Timy Project</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.0/css/bootstrap.min.css"/>
+    <title>Micro Skeleton</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.4/dist/tailwind.min.css"/>
 </head>
 <body>
-<div class="container">
-    <header class="header">
-        <h1>Timy Project</h1>
-    </header>
-    <section class="content">
+<div>
+    <div><h1>Micro Skeleton</h1></div>
+    <div>
         {include #content}
-    </section>
-    <footer class="footer">
+    </div>
+    <div>
         <span class="text-muted">
-            &copy; {=date(Y)} Timy
+            &copy; {=date(Y)} Micro Skeleton
         </span>
-    </footer>
+    </div>
 </div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.0/js/bootstrap.min.js"></script>
 </body>
 </html>
