--- a/app/templates/default.latte
+++ b/app/templates/default.latte
@@ -1,6 +1,26 @@
 {layout $_app->layout}
 
 {block #content}
-Vitejte!
-
-<a n:href="Tim:Micro:, path => kontakt">Prejit na kontakt</a>
+<main class="mt-16 mx-auto max-w-7xl px-4 sm:mt-24">
+    <div class="text-center">
+        <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
+            <span class="block xl:inline">Micro Skeleton</span>
+            <span class="block text-indigo-600 xl:inline">by Contributte</span>
+        </h1>
+        <p class="mt-3 max-w-md mx-auto text-base text-gray-500 sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
+            Experimental prototype by Milan <a href="https://f3l1x.io"><strong>Felix</strong></a> Šulc.
+        </p>
+        <div class="mt-5 max-w-md mx-auto sm:flex sm:justify-center md:mt-8">
+            <div class="rounded-md shadow">
+                <a href="https://github.com/contributte/micro-skeleton" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
+                    Show source
+                </a>
+            </div>
+            <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
+                <a href="https://contributte.org" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-gray-50 md:py-4 md:text-lg md:px-10">
+                    Show website
+                </a>
+            </div>
+        </div>
+    </div>
+</main>
